traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:17: error: Missing closing brace `}' assumed here
}
^